src/systems/ec/implementations/vanilla/packages/ec-component-footer-stanardised/ec-component-footer-standardised.scss
/**
 * Footer Standardised component
 * @define footer-standardised
 */

// Import base
@import '@ecl/ec-base/ec-base';

// Check if overridden dependencies are already loaded, if needed
@include check-imports(('ec-layout-grid', 'ec-component-link'));

/* stylelint-disable value-no-vendor-prefix, property-no-vendor-prefix */
@mixin ecl-footer-standardised(
  $bg-color: $ecl-color-blue,
  $separator-color: $ecl-color-blue-50,
  $text-color: $ecl-color-white,
  $column-gap: $ecl-grid-gutter-width
) {
  /* 
   * Global rules 
   */
  .ecl-footer-standardised {
    background-color: $bg-color;
    color: $text-color;
    margin: 0;
    padding-bottom: $ecl-spacing-xl;
  }

  .ecl-footer-standardised__container {
    display: flex;
    flex-direction: column;
  }

  .ecl-footer-standardised__section {
    margin-top: $ecl-spacing-l;

    &:first-of-type {
      margin-top: $ecl-spacing-xl;
    }

    > :first-child {
      margin-top: 0;
    }
  }

  .ecl-footer-standardised__title {
    font: $ecl-font-m;
    font-weight: $ecl-font-weight-bold;
  }

  .ecl-footer-standardised__title--separator {
    border-bottom: 1px solid $separator-color;
    padding-bottom: $ecl-spacing-xs;
  }

  .ecl-footer-standardised__description {
    color: $ecl-color-blue-25;
    font: $ecl-font-prolonged-s;
    margin-top: $ecl-spacing-xs;
  }

  .ecl-footer-standardised__content {
    font: $ecl-font-s;
    margin-top: $ecl-spacing-xs;
  }

  .ecl-footer-standardised__list {
    list-style: none;
    margin-bottom: 0;
    margin-top: $ecl-spacing-xs;
    padding-left: 0;
  }

  .ecl-footer-standardised__list-item {
    margin-top: $ecl-spacing-m;

    .ecl-footer-standardised__list--condensed & {
      margin-top: $ecl-spacing-xs;
    }

    &:first-of-type {
      margin-top: 0;
    }
  }

  .ecl-footer-standardised__list--inline {
    display: inline-flex;
    flex-wrap: wrap;

    .ecl-footer-standardised__list-item {
      margin-right: $ecl-spacing-l;
      margin-top: 0;

      /* stylelint-disable-next-line max-nesting-depth */
      &:last-of-type {
        margin-right: 0;
      }
    }
  }

  .ecl-footer-standardised__link {
    font: $ecl-font-s;
  }

  .ecl-footer-standardised__link,
  .ecl-footer-standardised__link:hover,
  .ecl-footer-standardised__link:active,
  .ecl-footer-standardised__link:focus {
    color: $text-color;
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up('lg') {
    .ecl-footer-standardised__section {
      margin-top: $ecl-spacing-xl;
    }

    .ecl-footer-standardised__title {
      font: $ecl-font-prolonged-m;
      font-weight: $ecl-font-weight-bold;
    }

    .ecl-footer-standardised__title--separator {
      border-bottom-width: 2px;
    }

    .ecl-footer-standardised__description {
      margin-top: $ecl-spacing-xl;
    }

    .ecl-footer-standardised__link {
      font: $ecl-font-prolonged-s;
    }
  }

  /* 
   * Section related rules 
   */
  .ecl-footer-standardised__section1,
  .ecl-footer-standardised__section2 {
    order: 1;
  }

  .ecl-footer-standardised__section3 {
    order: 3;
  }

  .ecl-footer-standardised__section4 {
    order: 2;
  }

  .ecl-footer-standardised__section5,
  .ecl-footer-standardised__section6,
  .ecl-footer-standardised__section7,
  .ecl-footer-standardised__section8,
  .ecl-footer-standardised__section9 {
    order: 4;
  }

  .ecl-footer-standardised__section6 {
    border-bottom: 1px solid $separator-color;
    border-top: 1px solid $separator-color;
    padding-bottom: $ecl-spacing-m;
    padding-top: $ecl-spacing-m;
  }

  .ecl-footer-standardised__section8 {
    margin-top: $ecl-spacing-m;
  }

  .ecl-footer-standardised__section9 {
    margin-top: $ecl-spacing-m;
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up('lg') {
    /* Grid layout */
    .ecl-footer-standardised__container {
      column-gap: $column-gap;
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      grid-template-rows: repeat(4, minmax(min-content, max-content));
      row-gap: 0;
    }

    .ecl-footer-standardised__section1 {
      grid-area: 1 / 1 / 3 / 2;
    }

    .ecl-footer-standardised__section2 {
      grid-area: 1 / 2 / 2 / 3;
    }

    .ecl-footer-standardised__section3 {
      grid-area: 1 / 3 / 2 / 4;
    }

    .ecl-footer-standardised__section4 {
      grid-area: 2 / 2 / 3 / 3;
    }

    .ecl-footer-standardised__section5 {
      grid-area: 2 / 3 / 3 / 4;
    }

    .ecl-footer-standardised__section6 {
      border-bottom-width: 2px;
      border-top-width: 2px;
      grid-area: 3 / 1 / 4 / 4;
    }

    .ecl-footer-standardised__section7 {
      grid-area: 4 / 1 / 5 / 2;
    }

    .ecl-footer-standardised__section8 {
      grid-area: 4 / 2 / 5 / 3;
    }

    .ecl-footer-standardised__section9 {
      grid-area: 4 / 3 / 5 / 4;
    }
  }
}

// Use mixin
@include exports('ec-component-footer-standardised') {
  @include ecl-footer-standardised();
}

